# Vulnera-zed-extension

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: release.yml
src/: lib.rs
